# anp-agent-example

./: .env.example  .gitignore  AGENTS.md  ANP_INTEGRATION_CN.md  ANP_INTEGRATION_EN.md  CLAUDE.md  README.cn.md  README.md  TEST_REPORT.md  env.example  pyproject.toml  sepc.md  start_anp_agent.py  start_server.py
did_documents/: did_wba_demo.agent-network_agents_demo.json  did_wba_example.com_user_alice.json
docs/jwt_key/: RS256-private.pem  RS256-public.pem
examples/: README.md  client_example.py  did_public_example.py  jsonrpc_test.py  quick_test.py  simple_agent_test.py  simple_test.py  simple_test.sh  simple_unified_test.sh  test_api.sh  test_with_real_auth.py
src/: __init__.py  ad_router.py  api_router.py  auth_middleware.py  config.py  did_server.py  jsonrpc_router.py  local_agent.py  local_agent_use_llm.py  main.py  mock_agent_connect.py  remote_agent.py  yaml_router.py
src/api/: external-interface.json  nl-interface.yaml
tests/: __init__.py  conftest.py  test_did_server.py
tests/api/: __init__.py  test_agent_endpoints.py  test_basic_endpoints.py
tests/auth/: __init__.py  test_auth_middleware.py
tests/integration/: __init__.py  test_full_workflow.py
tests/protocol/: __init__.py  test_anp_compliance.py
tests/unit/: __init__.py  test_config.py  test_main.py
